JVT++ (Flex and Bison)/JVTpp.output
Terminals unused in grammar

   NEWLINE


State 50 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: develop L_BRACKET statements R_BRACKET finish

    2 statements: statements statement
    3           | /* empty */

    4 statement: declaration SEMICOLON
    5          | assignment SEMICOLON
    6          | print SEMICOLON
    7          | expression SEMICOLON

    8 declaration: set IDENTIFIER ASSIGN expression

    9 set: NUMERAL
   10    | ALPHA

   11 assignment: IDENTIFIER ASSIGN expression

   12 print: show L_PARENTESIS IDENTIFIER R_PARENTESIS
   13      | show L_PARENTESIS ALPHA COMMA expression R_PARENTESIS
   14      | show L_PARENTESIS ALPHA COMMA expression COMMA expression R_PARENTESIS
   15      | show L_PARENTESIS ALPHA COMMA expression COMMA expression COMMA expression R_PARENTESIS
   16      | show L_PARENTESIS ALPHA COMMA IDENTIFIER R_PARENTESIS
   17      | show L_PARENTESIS ALPHA R_PARENTESIS
   18      | show L_PARENTESIS CHARACTER R_PARENTESIS

   19 expression: expression PLUS term
   20           | expression MINUS term
   21           | term

   22 term: term MULTIPLICATION factor
   23     | term DIVISION factor
   24     | factor

   25 factor: IDENTIFIER
   26       | NUMERAL
   27       | L_PARENTESIS expression R_PARENTESIS


Terminals, with rules where they appear

$end (0) 0
error (256)
NEWLINE (258)
develop (259) 1
finish (260) 1
show (261) 12 13 14 15 16 17 18
PLUS (262) 19
MINUS (263) 20
MULTIPLICATION (264) 22
DIVISION (265) 23
ASSIGN (266) 8 11
L_BRACKET (267) 1
R_BRACKET (268) 1
L_PARENTESIS (269) 12 13 14 15 16 17 18 27
R_PARENTESIS (270) 12 13 14 15 16 17 18 27
SEMICOLON (271) 4 5 6 7
COMMA (272) 13 14 15 16
NUMERAL (273) 9 26
ALPHA (274) 10 13 14 15 16 17
CHARACTER (275) 18
IDENTIFIER (276) 8 11 12 16 25


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
program (23)
    on left: 1, on right: 0
statements (24)
    on left: 2 3, on right: 1 2
statement (25)
    on left: 4 5 6 7, on right: 2
declaration (26)
    on left: 8, on right: 4
set (27)
    on left: 9 10, on right: 8
assignment (28)
    on left: 11, on right: 5
print (29)
    on left: 12 13 14 15 16 17 18, on right: 6
expression (30)
    on left: 19 20 21, on right: 7 8 11 13 14 15 19 20 27
term (31)
    on left: 22 23 24, on right: 19 20 21 22 23
factor (32)
    on left: 25 26 27, on right: 22 23 24


state 0

    0 $accept: . program $end

    develop  shift, and go to state 1

    program  go to state 2


state 1

    1 program: develop . L_BRACKET statements R_BRACKET finish

    L_BRACKET  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: develop L_BRACKET . statements R_BRACKET finish

    $default  reduce using rule 3 (statements)

    statements  go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    1 program: develop L_BRACKET statements . R_BRACKET finish
    2 statements: statements . statement

    show          shift, and go to state 6
    R_BRACKET     shift, and go to state 7
    L_PARENTESIS  shift, and go to state 8
    NUMERAL       shift, and go to state 9
    ALPHA         shift, and go to state 10
    IDENTIFIER    shift, and go to state 11

    statement    go to state 12
    declaration  go to state 13
    set          go to state 14
    assignment   go to state 15
    print        go to state 16
    expression   go to state 17
    term         go to state 18
    factor       go to state 19


state 6

   12 print: show . L_PARENTESIS IDENTIFIER R_PARENTESIS
   13      | show . L_PARENTESIS ALPHA COMMA expression R_PARENTESIS
   14      | show . L_PARENTESIS ALPHA COMMA expression COMMA expression R_PARENTESIS
   15      | show . L_PARENTESIS ALPHA COMMA expression COMMA expression COMMA expression R_PARENTESIS
   16      | show . L_PARENTESIS ALPHA COMMA IDENTIFIER R_PARENTESIS
   17      | show . L_PARENTESIS ALPHA R_PARENTESIS
   18      | show . L_PARENTESIS CHARACTER R_PARENTESIS

    L_PARENTESIS  shift, and go to state 20


state 7

    1 program: develop L_BRACKET statements R_BRACKET . finish

    finish  shift, and go to state 21


state 8

   27 factor: L_PARENTESIS . expression R_PARENTESIS

    L_PARENTESIS  shift, and go to state 8
    NUMERAL       shift, and go to state 22
    IDENTIFIER    shift, and go to state 23

    expression  go to state 24
    term        go to state 18
    factor      go to state 19


state 9

    9 set: NUMERAL .
   26 factor: NUMERAL .

    IDENTIFIER  reduce using rule 9 (set)
    $default    reduce using rule 26 (factor)


state 10

   10 set: ALPHA .

    $default  reduce using rule 10 (set)


state 11

   11 assignment: IDENTIFIER . ASSIGN expression
   25 factor: IDENTIFIER .

    ASSIGN  shift, and go to state 25

    $default  reduce using rule 25 (factor)


state 12

    2 statements: statements statement .

    $default  reduce using rule 2 (statements)


state 13

    4 statement: declaration . SEMICOLON

    SEMICOLON  shift, and go to state 26


state 14

    8 declaration: set . IDENTIFIER ASSIGN expression

    IDENTIFIER  shift, and go to state 27


state 15

    5 statement: assignment . SEMICOLON

    SEMICOLON  shift, and go to state 28


state 16

    6 statement: print . SEMICOLON

    SEMICOLON  shift, and go to state 29


state 17

    7 statement: expression . SEMICOLON
   19 expression: expression . PLUS term
   20           | expression . MINUS term

    PLUS       shift, and go to state 30
    MINUS      shift, and go to state 31
    SEMICOLON  shift, and go to state 32


state 18

   21 expression: term .
   22 term: term . MULTIPLICATION factor
   23     | term . DIVISION factor

    MULTIPLICATION  shift, and go to state 33
    DIVISION        shift, and go to state 34

    $default  reduce using rule 21 (expression)


state 19

   24 term: factor .

    $default  reduce using rule 24 (term)


state 20

   12 print: show L_PARENTESIS . IDENTIFIER R_PARENTESIS
   13      | show L_PARENTESIS . ALPHA COMMA expression R_PARENTESIS
   14      | show L_PARENTESIS . ALPHA COMMA expression COMMA expression R_PARENTESIS
   15      | show L_PARENTESIS . ALPHA COMMA expression COMMA expression COMMA expression R_PARENTESIS
   16      | show L_PARENTESIS . ALPHA COMMA IDENTIFIER R_PARENTESIS
   17      | show L_PARENTESIS . ALPHA R_PARENTESIS
   18      | show L_PARENTESIS . CHARACTER R_PARENTESIS

    ALPHA       shift, and go to state 35
    CHARACTER   shift, and go to state 36
    IDENTIFIER  shift, and go to state 37


state 21

    1 program: develop L_BRACKET statements R_BRACKET finish .

    $default  reduce using rule 1 (program)


state 22

   26 factor: NUMERAL .

    $default  reduce using rule 26 (factor)


state 23

   25 factor: IDENTIFIER .

    $default  reduce using rule 25 (factor)


state 24

   19 expression: expression . PLUS term
   20           | expression . MINUS term
   27 factor: L_PARENTESIS expression . R_PARENTESIS

    PLUS          shift, and go to state 30
    MINUS         shift, and go to state 31
    R_PARENTESIS  shift, and go to state 38


state 25

   11 assignment: IDENTIFIER ASSIGN . expression

    L_PARENTESIS  shift, and go to state 8
    NUMERAL       shift, and go to state 22
    IDENTIFIER    shift, and go to state 23

    expression  go to state 39
    term        go to state 18
    factor      go to state 19


state 26

    4 statement: declaration SEMICOLON .

    $default  reduce using rule 4 (statement)


state 27

    8 declaration: set IDENTIFIER . ASSIGN expression

    ASSIGN  shift, and go to state 40


state 28

    5 statement: assignment SEMICOLON .

    $default  reduce using rule 5 (statement)


state 29

    6 statement: print SEMICOLON .

    $default  reduce using rule 6 (statement)


state 30

   19 expression: expression PLUS . term

    L_PARENTESIS  shift, and go to state 8
    NUMERAL       shift, and go to state 22
    IDENTIFIER    shift, and go to state 23

    term    go to state 41
    factor  go to state 19


state 31

   20 expression: expression MINUS . term

    L_PARENTESIS  shift, and go to state 8
    NUMERAL       shift, and go to state 22
    IDENTIFIER    shift, and go to state 23

    term    go to state 42
    factor  go to state 19


state 32

    7 statement: expression SEMICOLON .

    $default  reduce using rule 7 (statement)


state 33

   22 term: term MULTIPLICATION . factor

    L_PARENTESIS  shift, and go to state 8
    NUMERAL       shift, and go to state 22
    IDENTIFIER    shift, and go to state 23

    factor  go to state 43


state 34

   23 term: term DIVISION . factor

    L_PARENTESIS  shift, and go to state 8
    NUMERAL       shift, and go to state 22
    IDENTIFIER    shift, and go to state 23

    factor  go to state 44


state 35

   13 print: show L_PARENTESIS ALPHA . COMMA expression R_PARENTESIS
   14      | show L_PARENTESIS ALPHA . COMMA expression COMMA expression R_PARENTESIS
   15      | show L_PARENTESIS ALPHA . COMMA expression COMMA expression COMMA expression R_PARENTESIS
   16      | show L_PARENTESIS ALPHA . COMMA IDENTIFIER R_PARENTESIS
   17      | show L_PARENTESIS ALPHA . R_PARENTESIS

    R_PARENTESIS  shift, and go to state 45
    COMMA         shift, and go to state 46


state 36

   18 print: show L_PARENTESIS CHARACTER . R_PARENTESIS

    R_PARENTESIS  shift, and go to state 47


state 37

   12 print: show L_PARENTESIS IDENTIFIER . R_PARENTESIS

    R_PARENTESIS  shift, and go to state 48


state 38

   27 factor: L_PARENTESIS expression R_PARENTESIS .

    $default  reduce using rule 27 (factor)


state 39

   11 assignment: IDENTIFIER ASSIGN expression .
   19 expression: expression . PLUS term
   20           | expression . MINUS term

    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31

    $default  reduce using rule 11 (assignment)


state 40

    8 declaration: set IDENTIFIER ASSIGN . expression

    L_PARENTESIS  shift, and go to state 8
    NUMERAL       shift, and go to state 22
    IDENTIFIER    shift, and go to state 23

    expression  go to state 49
    term        go to state 18
    factor      go to state 19


state 41

   19 expression: expression PLUS term .
   22 term: term . MULTIPLICATION factor
   23     | term . DIVISION factor

    MULTIPLICATION  shift, and go to state 33
    DIVISION        shift, and go to state 34

    $default  reduce using rule 19 (expression)


state 42

   20 expression: expression MINUS term .
   22 term: term . MULTIPLICATION factor
   23     | term . DIVISION factor

    MULTIPLICATION  shift, and go to state 33
    DIVISION        shift, and go to state 34

    $default  reduce using rule 20 (expression)


state 43

   22 term: term MULTIPLICATION factor .

    $default  reduce using rule 22 (term)


state 44

   23 term: term DIVISION factor .

    $default  reduce using rule 23 (term)


state 45

   17 print: show L_PARENTESIS ALPHA R_PARENTESIS .

    $default  reduce using rule 17 (print)


state 46

   13 print: show L_PARENTESIS ALPHA COMMA . expression R_PARENTESIS
   14      | show L_PARENTESIS ALPHA COMMA . expression COMMA expression R_PARENTESIS
   15      | show L_PARENTESIS ALPHA COMMA . expression COMMA expression COMMA expression R_PARENTESIS
   16      | show L_PARENTESIS ALPHA COMMA . IDENTIFIER R_PARENTESIS

    L_PARENTESIS  shift, and go to state 8
    NUMERAL       shift, and go to state 22
    IDENTIFIER    shift, and go to state 50

    expression  go to state 51
    term        go to state 18
    factor      go to state 19


state 47

   18 print: show L_PARENTESIS CHARACTER R_PARENTESIS .

    $default  reduce using rule 18 (print)


state 48

   12 print: show L_PARENTESIS IDENTIFIER R_PARENTESIS .

    $default  reduce using rule 12 (print)


state 49

    8 declaration: set IDENTIFIER ASSIGN expression .
   19 expression: expression . PLUS term
   20           | expression . MINUS term

    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31

    $default  reduce using rule 8 (declaration)


state 50

   16 print: show L_PARENTESIS ALPHA COMMA IDENTIFIER . R_PARENTESIS
   25 factor: IDENTIFIER .

    R_PARENTESIS  shift, and go to state 52

    R_PARENTESIS  [reduce using rule 25 (factor)]
    $default      reduce using rule 25 (factor)


state 51

   13 print: show L_PARENTESIS ALPHA COMMA expression . R_PARENTESIS
   14      | show L_PARENTESIS ALPHA COMMA expression . COMMA expression R_PARENTESIS
   15      | show L_PARENTESIS ALPHA COMMA expression . COMMA expression COMMA expression R_PARENTESIS
   19 expression: expression . PLUS term
   20           | expression . MINUS term

    PLUS          shift, and go to state 30
    MINUS         shift, and go to state 31
    R_PARENTESIS  shift, and go to state 53
    COMMA         shift, and go to state 54


state 52

   16 print: show L_PARENTESIS ALPHA COMMA IDENTIFIER R_PARENTESIS .

    $default  reduce using rule 16 (print)


state 53

   13 print: show L_PARENTESIS ALPHA COMMA expression R_PARENTESIS .

    $default  reduce using rule 13 (print)


state 54

   14 print: show L_PARENTESIS ALPHA COMMA expression COMMA . expression R_PARENTESIS
   15      | show L_PARENTESIS ALPHA COMMA expression COMMA . expression COMMA expression R_PARENTESIS

    L_PARENTESIS  shift, and go to state 8
    NUMERAL       shift, and go to state 22
    IDENTIFIER    shift, and go to state 23

    expression  go to state 55
    term        go to state 18
    factor      go to state 19


state 55

   14 print: show L_PARENTESIS ALPHA COMMA expression COMMA expression . R_PARENTESIS
   15      | show L_PARENTESIS ALPHA COMMA expression COMMA expression . COMMA expression R_PARENTESIS
   19 expression: expression . PLUS term
   20           | expression . MINUS term

    PLUS          shift, and go to state 30
    MINUS         shift, and go to state 31
    R_PARENTESIS  shift, and go to state 56
    COMMA         shift, and go to state 57


state 56

   14 print: show L_PARENTESIS ALPHA COMMA expression COMMA expression R_PARENTESIS .

    $default  reduce using rule 14 (print)


state 57

   15 print: show L_PARENTESIS ALPHA COMMA expression COMMA expression COMMA . expression R_PARENTESIS

    L_PARENTESIS  shift, and go to state 8
    NUMERAL       shift, and go to state 22
    IDENTIFIER    shift, and go to state 23

    expression  go to state 58
    term        go to state 18
    factor      go to state 19


state 58

   15 print: show L_PARENTESIS ALPHA COMMA expression COMMA expression COMMA expression . R_PARENTESIS
   19 expression: expression . PLUS term
   20           | expression . MINUS term

    PLUS          shift, and go to state 30
    MINUS         shift, and go to state 31
    R_PARENTESIS  shift, and go to state 59


state 59

   15 print: show L_PARENTESIS ALPHA COMMA expression COMMA expression COMMA expression R_PARENTESIS .

    $default  reduce using rule 15 (print)
